# Python-Projects

./: .gitignore  README.MD
.github/scripts/: update_readme.py
.github/workflows/: update-readme.yml
Birthday Problem Simulation/: README.MD
Birthday Problem Simulation/src/: main.py
Contact Book/: README.md
Contact Book/Argparse Contact Book/: README.md
Contact Book/Argparse Contact Book/src/: contact_cli.py  contacts.json
Contact Book/CLI-Based Contact Book/: README.md
Contact Book/CLI-Based Contact Book/src/: main.py
Happy Numbers/: readme.md  run.py
Monty Hall Problem Simulation/: README.MD
Monty Hall Problem Simulation/src/: app.py  monty_hall.py
Number Guesser/: requirements.txt
Number Guesser/src/: main.py
Number Guesser/src/game_logic/: hint.py  num_generator.py  scorer.py
Number Guesser/src/utils/: input_validator.py
Password Generator/: README.MD
Password Generator - GUI/: README.MD
Password Generator - GUI/src/: app.py  password_generators.py
Password Generator/src/: main.py
Rock-Paper-Scissors/: README.md
Rock-Paper-Scissors/src/: main.py
Tic-Tac-Toe/: READMe.md
Tic-Tac-Toe/src/: main.py
Youtube Downloader/youtube_dl_pro/: .gitignore  README.md  add_to_path.ps1  pyproject.toml  requirements.txt  ytdl.cmd
Youtube Downloader/youtube_dl_pro/src/: __init__.py  cli.py  downloader.py
